--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,3 +4,5 @@ phases:
   build:
     commands:
       - aws s3 cp index.html s3://luit-red-jan-2024-cicd-beta --acl public-read
+      - if [ "$CODEBUILD_WEBHOOK_EVENT" == "PULL_REQUEST_MERGED" ]  ; 
+        then aws s3 cp index.html s3://luit-red-jan-2024-cicd-prod/index.html --acl public-read; fi
